# openssl-stuff

./: CMakeLists.txt  README.md  common.cpp  common.hpp
cert_create/: CMakeLists.txt  main.cpp
certs/: README.md
certs/client/: client.key  client.pem
certs/server/: cert.key  cert.pem
tls_client/: CMakeLists.txt  main.cpp
tls_server/: CMakeLists.txt  main.cpp
